[tool.poetry]
name = "joserfc-wrapper"
version = "0.1.1"
description = ""
authors = ["hexim <hexim@hexim.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
joserfc = "^0.9.0"
hvac = {extras = ["parser"], version = "^2.1.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
tox = "^4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
